infra/istio/07-gateway-api.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-api
  namespace: aulainfra
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8000
        name: http
        protocol: HTTP
      hosts:
        - "*"
