infra/istio/01-virtual-svc-db-customers.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-db-customers
  namespace: aulainfra
spec:
  hosts:
    - mysqldb-customers.aulainfra.svc.cluster.local
  tcp:
    - match:
      - port: 3306
      route:
      - destination:
          host: mysqldb-customers.aulainfra.svc.cluster.local
          port:
            number: 3306
