infra/istio/02-virtual-svc-db-visits.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-db-visits
  namespace: aulainfra
spec:
  hosts:
    - mysqldb-visits.aulainfra.svc.cluster.local
  tcp:
    - match:
      - port: 3306
      route:
      - destination:
          host: mysqldb-visits.aulainfra.svc.cluster.local
          port:
            number: 3306
