infra/istio/03-virtual-svc-db-vets.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-db-vets
  namespace: aulainfra
spec:
  hosts:
    - mysqldb-vets.aulainfra.svc.cluster.local
  tcp:
    - match:
      - port: 3306
      route:
      - destination:
          host: mysqldb-vets.aulainfra.svc.cluster.local
          port:
            number: 3306
