infra/istio/08-virtual-svc-api.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-api
  namespace: aulainfra
spec:
  hosts:
    - "*"
  gateways:
    - gateway-app
  http:
    - match:
      - port: 80
      route:
      - destination:
          host: api-gateway.aulainfra.svc.cluster.local
          port:
            number: 8000
