infra/istio/10-virtual-svc-frontend.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-frontend
  namespace: aulainfra
spec:
  hosts:
    - "*"
  gateways:
    - gateway-frontend
  http:
    - route:
      - destination:
          host: frontend-svc.aulainfra.svc.cluster.local
          port:
            number: 8080
